# hashtable-bench

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
results/E2388G-202305-native/csv/: absl::flat_hash_map__absl::Hash__long_string_fix_64__uint64_t.csv  absl::flat_hash_map__absl::Hash__long_string_max_64__uint64_t.csv  absl::flat_hash_map__absl::Hash__mask_high_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__absl::Hash__mask_low_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__absl::Hash__mask_split_bits_uint64_t__56bytes_payload.csv  absl::flat_hash_map__absl::Hash__mask_split_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__absl::Hash__mid_string_fix_24__uint64_t.csv  absl::flat_hash_map__absl::Hash__mid_string_max_24__uint64_t.csv  absl::flat_hash_map__absl::Hash__small_string_fix_12__uint64_t.csv  absl::flat_hash_map__absl::Hash__small_string_max_12__uint64_t.csv  absl::flat_hash_map__absl::Hash__uniform_uint64_t__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__long_string_fix_64__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__long_string_max_64__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mask_high_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mask_low_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mask_split_bits_uint64_t__56bytes_payload.csv  absl::flat_hash_map__robin_hood::hash__mask_split_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mid_string_fix_24__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mid_string_max_24__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__small_string_fix_12__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__small_string_max_12__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__uniform_uint64_t__uint64_t.csv  absl::flat_hash_map__std::hash__long_string_fix_64__uint64_t.csv  absl::flat_hash_map__std::hash__long_string_max_64__uint64_t.csv  absl::flat_hash_map__std::hash__mask_high_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__std::hash__mask_low_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__std::hash__mask_split_bits_uint64_t__56bytes_payload.csv  absl::flat_hash_map__std::hash__mask_split_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__std::hash__mid_string_fix_24__uint64_t.csv  absl::flat_hash_map__std::hash__mid_string_max_24__uint64_t.csv  absl::flat_hash_map__std::hash__small_string_fix_12__uint64_t.csv  absl::flat_hash_map__std::hash__small_string_max_12__uint64_t.csv  absl::flat_hash_map__std::hash__uniform_uint64_t__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__long_string_fix_64__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__long_string_max_64__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__mid_string_fix_24__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__mid_string_max_24__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__small_string_fix_12__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__small_string_max_12__uint64_t.csv  absl::node_hash_map__absl::Hash__long_string_fix_64__uint64_t.csv  (+389 more)
results/m3-pro/: absl::flat_hash_map__absl::Hash__long_string_max_64__uint64_t.csv  absl::flat_hash_map__absl::Hash__mask_low_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__absl::Hash__mask_split_bits_uint64_t__56bytes_payload.csv  absl::flat_hash_map__absl::Hash__mid_string_fix_24__uint64_t.csv  absl::flat_hash_map__absl::Hash__small_string_max_12__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mask_high_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mask_split_bits_uint64_t__56bytes_payload.csv  absl::flat_hash_map__robin_hood::hash__mask_split_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mid_string_fix_24__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__mid_string_max_24__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__small_string_max_12__uint64_t.csv  absl::flat_hash_map__robin_hood::hash__uniform_uint64_t__uint64_t.csv  absl::flat_hash_map__std::hash__mask_high_bits_uint64_t__uint64_t.csv  absl::flat_hash_map__std::hash__mask_split_bits_uint64_t__56bytes_payload.csv  absl::flat_hash_map__std::hash__small_string_max_12__uint64_t.csv  absl::flat_hash_map__std::hash__uniform_uint64_t__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__long_string_max_64__uint64_t.csv  absl::flat_hash_map__xxHash_xxh3__mid_string_fix_24__uint64_t.csv  absl::node_hash_map__absl::Hash__long_string_fix_64__uint64_t.csv  absl::node_hash_map__absl::Hash__mask_high_bits_uint64_t__uint64_t.csv  absl::node_hash_map__absl::Hash__mask_low_bits_uint64_t__uint64_t.csv  absl::node_hash_map__absl::Hash__small_string_fix_12__uint64_t.csv  absl::node_hash_map__absl::Hash__small_string_max_12__uint64_t.csv  absl::node_hash_map__robin_hood::hash__long_string_max_64__uint64_t.csv  absl::node_hash_map__robin_hood::hash__mask_low_bits_uint64_t__uint64_t.csv  absl::node_hash_map__robin_hood::hash__mask_split_bits_uint64_t__56bytes_payload.csv  absl::node_hash_map__robin_hood::hash__mid_string_max_24__uint64_t.csv  absl::node_hash_map__robin_hood::hash__small_string_fix_12__uint64_t.csv  absl::node_hash_map__robin_hood::hash__uniform_uint64_t__uint64_t.csv  absl::node_hash_map__std::hash__long_string_max_64__uint64_t.csv  absl::node_hash_map__std::hash__mid_string_max_24__uint64_t.csv  absl::node_hash_map__std::hash__small_string_fix_12__uint64_t.csv  absl::node_hash_map__std::hash__small_string_max_12__uint64_t.csv  absl::node_hash_map__std::hash__uniform_uint64_t__uint64_t.csv  absl::node_hash_map__xxHash_xxh3__long_string_fix_64__uint64_t.csv  absl::node_hash_map__xxHash_xxh3__long_string_max_64__uint64_t.csv  absl::node_hash_map__xxHash_xxh3__mid_string_fix_24__uint64_t.csv  absl::node_hash_map__xxHash_xxh3__small_string_max_12__uint64_t.csv  ankerl::unordered_dense_map__absl::Hash__long_string_fix_64__uint64_t.csv  ankerl::unordered_dense_map__absl::Hash__mask_split_bits_uint64_t__56bytes_payload.csv  (+187 more)
src/: benchmark.cpp
src/utils/: cpu_timer.h  histogram_wrapper.h  raw_histogram.h
tools/: analyze_results.ipynb  assemble_post_js.py  chart_story.py  gen_charts.py  run_bench.py  verify_charts.py
(+1444 files in other folders)
